--- a/notebooks/1.0-cd-task1.ipynb
+++ b/notebooks/1.0-cd-task1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,11 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
+    "import os\n",
+    "\n",
     "#my info\n",
     "__author__ = 'Cici Du'\n",
-    "__email__ = 'ciciechodu@gmail.com'"
+    "__email__ = 'cicidhz@gmail.com'"
    ]
   },
   {
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +83,23 @@
     "    '''read individual sheet'''\n",
     "    return pd.read_excel(filepath, sheet_name = sheet_name, skiprows = 1)\n",
     "\n",
-    "filepath = 'KPMG_VI_Raw_Data.xlsx'"
+    "filepath = '/Users/cicidu/Projects/kpmgvi/data/KPMG_VI_Raw_Data.xlsx'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bg/7gtqbmv57q18_39nvwb8mgb80000gn/T/ipykernel_3281/2130631373.py:3: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype={value.dtype})\n",
+      "  return pd.read_excel(filepath, sheet_name = sheet_name, skiprows = 1)\n"
+     ]
+    }
+   ],
    "source": [
     "transactions_df = read_sheet(\"Transactions\")\n",
     "custdemo_df = read_sheet(\"CustomerDemographic\")\n",
@@ -1155,7 +1166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1169,9 +1180,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
